数字を文字に変換

--- a/extension/index.html
+++ b/extension/index.html
@@ -5,7 +5,7 @@
 <script src="jQuery.js"></script>
 
 <!-- jQueryを使って動きをつけるファイル -->
-<script src="try.js"></script>
+<script src="script.js"></script>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -20,7 +20,7 @@
       <!-- <div class="balloon1" onMouseover="openPopUp()" onMouseout="closePopUp()"> -->
           <p>こんにちは。これは例です。</p>
       </div>  
-  </div>
+    </div>
     <!-- <input class="sam" onMouseover="openPopUp()" onMouseout="closePopUp()"> -->
 
     <!-- Optional JavaScript -->
